--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2017-02-09 Thu 17:31 -->
+<!-- 2017-02-09 Thu 17:37 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>system homepage website</title>
@@ -178,7 +178,7 @@
   /*]]>*/-->
 </style>
 <link href="css/typography.css" rel="stylesheet" type="text/css" />
-<link href="css/grid.css" rel="stylesheet" type="text/css" />
+<link href="css/grid-named-lines.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Roboto+Condensed|Source+Serif+Pro|Inconsolata" rel="stylesheet">
 <script src="main.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -234,21 +234,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga5298d8">Installation</a></li>
-<li><a href="#org95ab62f">Quickstart</a></li>
-<li><a href="#org3db4c6a">Introduction</a></li>
-<li><a href="#orgdee5665">Duct</a></li>
-<li><a href="#org774bd7e">Live reloading</a></li>
-<li><a href="#org282cf15">Components</a></li>
-<li><a href="#orga63ebbb">Examples</a></li>
-<li><a href="#org20c8879">API</a></li>
+<li><a href="#org34cc079">Installation</a></li>
+<li><a href="#org033ffad">Quickstart</a></li>
+<li><a href="#orge326112">Introduction</a></li>
+<li><a href="#org4fa1319">Duct</a></li>
+<li><a href="#org17e355b">Live reloading</a></li>
+<li><a href="#org2eb6cb0">Components</a></li>
+<li><a href="#orgeb56ea2">Examples</a></li>
+<li><a href="#org73aa338">API</a></li>
 </ul>
 </div>
 </nav>
 
-<article id="outline-container-orga5298d8" class="outline-2">
-<h2 id="orga5298d8">Installation</h2>
-<div class="outline-text-2" id="text-orga5298d8">
+<article id="outline-container-org34cc079" class="outline-2">
+<h2 id="org34cc079">Installation</h2>
+<div class="outline-text-2" id="text-org34cc079">
 <p>
 Add the following to your project’s dependencies.
 </p>
@@ -257,9 +257,9 @@ lala
 </pre>
 </div>
 </article>
-<article id="outline-container-org95ab62f" class="outline-2">
-<h2 id="org95ab62f">Quickstart</h2>
-<div class="outline-text-2" id="text-org95ab62f">
+<article id="outline-container-org033ffad" class="outline-2">
+<h2 id="org033ffad">Quickstart</h2>
+<div class="outline-text-2" id="text-org033ffad">
 <div class="org-src-container">
 <pre class="src src-clojure"><span style="color: #707183;">(</span><span style="color: #a020f0;">ns</span> <span style="color: #228b22;">user</span>
   <span style="color: #7388d6;">(</span><span style="color: #008b8b;">:require</span> <span style="color: #909183;">[</span><span style="color: #228b22;">system.repl</span> <span style="color: #008b8b;">:refer</span> <span style="color: #709870;">[</span>system set-init! reset<span style="color: #709870;">]</span><span style="color: #909183;">]</span>
@@ -270,17 +270,17 @@ lala
 </div>
 </div>
 </article>
-<article id="outline-container-org3db4c6a" class="outline-2">
-<h2 id="org3db4c6a">Introduction</h2>
-<div class="outline-text-2" id="text-org3db4c6a">
+<article id="outline-container-orge326112" class="outline-2">
+<h2 id="orge326112">Introduction</h2>
+<div class="outline-text-2" id="text-orge326112">
 <p>
 <b>system</b> owes to <a href="https://github.com/stuartsierra/component">component</a> both in spirit and in name. The component library helps implement the reloaded pattern as championed by Stuart Sierra. <b>system</b> is built on top of it, offering a set of readymade components.
 </p>
 </div>
 </article>
-<article id="outline-container-orgdee5665" class="outline-2">
-<h2 id="orgdee5665">Duct</h2>
-<div class="outline-text-2" id="text-orgdee5665">
+<article id="outline-container-org4fa1319" class="outline-2">
+<h2 id="org4fa1319">Duct</h2>
+<div class="outline-text-2" id="text-org4fa1319">
 <p>
 The Duct components, an idea that originated with James Reeves, are an
 abstraction on top of the Ring architecture. It revolves around a
@@ -296,9 +296,9 @@ components optionally receive dependencies as argument. <sup><a id="fnr.1" class
 </p>
 </div>
 </article>
-<article id="outline-container-org774bd7e" class="outline-2">
-<h2 id="org774bd7e">Live reloading</h2>
-<div class="outline-text-2" id="text-org774bd7e">
+<article id="outline-container-org17e355b" class="outline-2">
+<h2 id="org17e355b">Live reloading</h2>
+<div class="outline-text-2" id="text-org17e355b">
 <p>
 <code>System</code> and <code>Boot</code> are a match made in heaven. Some of the properties that boot-system brings to your workflow are:
 </p>
@@ -345,9 +345,9 @@ If you don’t supply a SYS argument, the system task will act as a <code>tools.
 </p>
 </div>
 
-<div id="outline-container-org30afd4e" class="outline-4">
-<h4 id="org30afd4e">Code reload vs system restart</h4>
-<div class="outline-text-4" id="text-org30afd4e">
+<div id="outline-container-orgb8a8a29" class="outline-4">
+<h4 id="orgb8a8a29">Code reload vs system restart</h4>
+<div class="outline-text-4" id="text-orgb8a8a29">
 <p>
 In traditional Lisp systems, users can redefine arbitrary, discrete units of code. Clojure, as a Lisp, is no exception. However, as a hosted language with many advanced dynamic features, code reloading has many <a href="https://github.com/clojure/tools.namespace#reloading-code-motivation">pitfalls</a>. <code>tools.namespace</code> fixes many of them, but ultimately, reloaded code will not agree with runtime state, and the system will need a full restart. This is  where <code>component</code> fits in. (Note that both libraries were authored by Stuart Sierra).
 </p>
@@ -375,18 +375,18 @@ In summary, when you instruct <code>boot-system</code> to manage your applicatio
 </div>
 </div>
 
-<div id="outline-container-org7df47f8" class="outline-4">
-<h4 id="org7df47f8">The Holy Grail</h4>
-<div class="outline-text-4" id="text-org7df47f8">
+<div id="outline-container-org783ad19" class="outline-4">
+<h4 id="org783ad19">The Holy Grail</h4>
+<div class="outline-text-4" id="text-org783ad19">
 <p>
 With <code>system</code>, you can enjoy a true Lisp environment where code is always live (<b>live coding</b>). A <a href="https://github.com/danielsz/holygrail">tutorial</a> is available in a separate repository.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org8effb23" class="outline-4">
-<h4 id="org8effb23">Leiningen</h4>
-<div class="outline-text-4" id="text-org8effb23">
+<div id="outline-container-org6bfac16" class="outline-4">
+<h4 id="org6bfac16">Leiningen</h4>
+<div class="outline-text-4" id="text-org6bfac16">
 <p>
 If you are using Leiningen, we recommend <a href="https://github.com/bhauman/lein-figwheel">Figwheel</a> to address browser-side hot-reloading concerns.
 </p>
@@ -394,9 +394,9 @@ If you are using Leiningen, we recommend <a href="https://github.com/bhauman/lei
 </div>
 </article>
 
-<article id="outline-container-org282cf15" class="outline-2">
-<h2 id="org282cf15">Components</h2>
-<div class="outline-text-2" id="text-org282cf15">
+<article id="outline-container-org2eb6cb0" class="outline-2">
+<h2 id="org2eb6cb0">Components</h2>
+<div class="outline-text-2" id="text-org2eb6cb0">
 <p>
 The following components are available
 </p>
@@ -428,26 +428,26 @@ The following components are available
 </ul>
 </div>
 </article>
-<article id="outline-container-orga63ebbb" class="outline-2">
-<h2 id="orga63ebbb">Examples</h2>
-<div class="outline-text-2" id="text-orga63ebbb">
+<article id="outline-container-orgeb56ea2" class="outline-2">
+<h2 id="orgeb56ea2">Examples</h2>
+<div class="outline-text-2" id="text-orgeb56ea2">
 <p>
 Example projects are available under the <a href="https://github.com/danielsz/system/tree/master/examples">examples</a> folder.
 </p>
 </div>
 
-<div id="outline-container-orge14884a" class="outline-3">
-<h3 id="orge14884a">Get-started projects</h3>
-<div class="outline-text-3" id="text-orge14884a">
+<div id="outline-container-org5a3ba3e" class="outline-3">
+<h3 id="org5a3ba3e">Get-started projects</h3>
+<div class="outline-text-3" id="text-org5a3ba3e">
 <p>
 Two minimal projects that will help you get started. Both the <a href="https://github.com/danielsz/system/tree/master/examples/leiningen">Leiningen</a> and <a href="https://github.com/danielsz/system/tree/master/examples/boot">Boot</a> toolchain are covered.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgbfc1c63" class="outline-3">
-<h3 id="orgbfc1c63">Real-world web service</h3>
-<div class="outline-text-3" id="text-orgbfc1c63">
+<div id="outline-container-org0dc508a" class="outline-3">
+<h3 id="org0dc508a">Real-world web service</h3>
+<div class="outline-text-3" id="text-org0dc508a">
 <p>
 A web service written multiple times using different styles.
 </p>
@@ -459,9 +459,9 @@ A web service written multiple times using different styles.
 </div>
 </div>
 
-<div id="outline-container-org95985de" class="outline-3">
-<h3 id="org95985de">Websockets</h3>
-<div class="outline-text-3" id="text-org95985de">
+<div id="outline-container-orgd58d81f" class="outline-3">
+<h3 id="orgd58d81f">Websockets</h3>
+<div class="outline-text-3" id="text-orgd58d81f">
 <p>
 A web application with client-side UI. Demonstrates login procedure with Sente (a realtime web comms library).  
 </p>
@@ -473,8 +473,8 @@ A web application with client-side UI. Demonstrates login procedure with Sente (
 </div>
 </article>
 
-<article id="outline-container-org20c8879" class="outline-2">
-<h2 id="org20c8879">API</h2>
+<article id="outline-container-org73aa338" class="outline-2">
+<h2 id="org73aa338">API</h2>
 </article>
 <div id="footnotes">
 <h2 class="footnotes">Footnotes: </h2>
